Issue #10 Created initial basic transactions table

--- a/Commerce-Client/Commerce-Client/src/app/app.component.html
+++ b/Commerce-Client/Commerce-Client/src/app/app.component.html
@@ -12,7 +12,6 @@
   </nav>
   
 </div>
-
-
-
-<router-outlet></router-outlet>
+<ng-container>
+  <app-transactions></app-transactions>
+</ng-container>
