Issue #33 Added more styling to transaction table, Moved navigation bar html to navigation component

--- a/Commerce-Client/src/app/app.component.html
+++ b/Commerce-Client/src/app/app.component.html
@@ -1,17 +1,4 @@
-<!-- Toolbar -->
-<div class="toolbar" role="banner">
-  <a href="https://www.commercebank.com/">
-    <img
-      alt="Commerce Logo"
-      src="assets/img/commerce-bank-logo.png"
-    />
-  </a>
-  <nav class="nav-primary">
-    <a>Dashboard</a>
-    <a>Transactions</a>
-  </nav>
-  
-</div>
-<ng-container>
+<app-navigation></app-navigation>
+<div class="container">
   <app-transactions></app-transactions>
-</ng-container>
+</div>
