--- a/Commerce-Client/src/app/transactions/transactions.component.html
+++ b/Commerce-Client/src/app/transactions/transactions.component.html
@@ -1,6 +1,6 @@
 <table 
   class="table table-striped table-bordered">
-  <thead>
+  <thead class="table-head">
     <tr>
       <th scope="col">Account</th>
       <th scope="col">Date</th>
