--- a/Commerce-Client/src/app/app.component.html
+++ b/Commerce-Client/src/app/app.component.html
@@ -1,4 +1,6 @@
 <app-navigation></app-navigation>
 <div class="container">
-  <app-transactions></app-transactions>
+  <app-notifications></app-notifications> 
 </div>
+
+
