Issue #32 Added initial angular router configuration to navigate around the pages

--- a/Commerce-Client/src/app/app.component.html
+++ b/Commerce-Client/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-navigation></app-navigation>
 <div class="container">
-  <app-transactions></app-transactions>
+  <router-outlet></router-outlet>
 </div>
