--- a/Commerce-Client/src/app/navigation/navigation.component.html
+++ b/Commerce-Client/src/app/navigation/navigation.component.html
@@ -8,9 +8,9 @@
     </a>
     <nav class="nav-primary">
       <a>Dashboard</a>
-      <a>Transactions</a>
+      <a routerLink="transactions">Transactions</a>
     </nav>
-    <a class="logout">Logout
+    <a class="logout" routerLink="login">Logout
         <img class="user-ico" src="/assets/img/person-fill.svg" alt="">
     </a>
 </div>
