Added routerconfig for notifications page

--- a/Commerce-Client/src/app/navigation/navigation.component.html
+++ b/Commerce-Client/src/app/navigation/navigation.component.html
@@ -7,7 +7,7 @@
       />
     </a>
     <nav class="nav-primary">
-      <a>Dashboard</a>
+      <a routerLink="notifications">Notifications Dashboard</a>
       <a routerLink="transactions">Transactions</a>
     </nav>
     <a class="logout" routerLink="login">Logout
