Added more fields into notifications filter field

--- a/Commerce-Client/src/app/app.component.html
+++ b/Commerce-Client/src/app/app.component.html
@@ -1,6 +1,8 @@
 <app-navigation></app-navigation>
-<div class="container">
+<div class="container card">
+  <hr>
   <router-outlet></router-outlet>
+  <hr>
 </div>
   <!-- <app-notifications></app-notifications> 
 </div> -->
