--- a/Commerce-Client/src/app/app.component.html
+++ b/Commerce-Client/src/app/app.component.html
@@ -1,6 +1,10 @@
 <app-navigation></app-navigation>
-<div class="container">
-  <app-notifications></app-notifications> 
+<div class="container card">
+  <hr>
+  <router-outlet></router-outlet>
+  <hr>
 </div>
+  <!-- <app-notifications></app-notifications> 
+</div> -->
 
 
