added initial table to notification

--- a/Commerce-Client/src/app/notifications/notifications.component.css
+++ b/Commerce-Client/src/app/notifications/notifications.component.css
@@ -1,7 +1,7 @@
 /* CSS for filters */
 .btn-group{
   display: flex; 
-  background-color: #ccc;
+  background-color: #dee2e6;
   border-radius: 5px;
   
 }
