--- a/Commerce-Client/src/app/notifications/notifications.component.css
+++ b/Commerce-Client/src/app/notifications/notifications.component.css
@@ -3,31 +3,43 @@
   display: flex; 
   background-color: #dee2e6;
   border-radius: 5px;
-  
 }
+
 .btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active, .show>.btn-primary.dropdown-toggle {
   background-color: #006747;
+  color: #fff;
+  border-color: #333;
 }
 .btn-group>.btn-group:not(:first-child)>.btn, .btn-group>.btn:not(:first-child) {
-  border-radius: 5px;;
+  border-radius: 5px;
 }
 .btn-group>.btn-group:not(:last-child)>.btn, .btn-group>.btn:not(:last-child):not(.dropdown-toggle) {
   border-radius: 5px;
 
 }
 
-.btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active, .show>.btn-primary.dropdown-toggle {
-  color: #fff;
-  border-color: #333;
-}
-
 .btn-primary{
-  margin: 10px; 
+  margin: 0px 15px 10px 10px; 
   border-radius: 5px; 
- 
   color: #000;
   background-color: #fff;
   border-color: #ccc;
+}
+
+/* .btn-group-standard {
+  display: flex; 
+  padding: 15px;
+  width: 50%;
+  background-color: #dee2e6;
+  border-radius: 5px;
+} */
+
+.btn-standard {
+  margin: auto;
+  border-radius: 5px;
+  background-color: #006747;
+  color: #fff;
+  border-color: #333;
 }
 
 .btn-primary.focus{
