--- a/Commerce-Client/src/app/notifications/notifications.component.html
+++ b/Commerce-Client/src/app/notifications/notifications.component.html
@@ -79,30 +79,34 @@
   <table class="table table-striped">
     <thead>
       <tr>
-        <th scope="col">#</th>
-        <th scope="col">First</th>
-        <th scope="col">Last</th>
-        <th scope="col">Handle</th>
+        <th scope="col">Trigger</th>
+        <th scope="col">Reason</th>
+        <th scope="col">Date</th>
+        <th scope="col">Amount</th>
+        <th scope="col">Description</th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <th scope="row">1</th>
-        <td>Mark</td>
-        <td>Otto</td>
-        <td>@mdo</td>
+        <th scope="row">Amount, New</th>
+        <td>5000 withdrawal</td>
+        <td>3/15/2020</td>
+        <td>5000</td>
+        <td>Amazon.com</td>
       </tr>
       <tr>
-        <th scope="row">2</th>
-        <td>Jacob</td>
-        <td>Thornton</td>
-        <td>@fat</td>
+        <th scope="row">Time</th>
+        <td>3:00am</td>
+        <td>3/1/2020</td>
+        <td>40.37</td>
+        <td>Local Bar</td>
       </tr>
       <tr>
-        <th scope="row">3</th>
-        <td>Larry</td>
-        <td>the Bird</td>
-        <td>@twitter</td>
+        <th scope="row">Location</th>
+        <td>Russia</td>
+        <td>3/10/2020</td>
+        <td>30.00</td>
+        <td>Perogi's</td>
       </tr>
     </tbody>
   </table>
