--- a/Commerce-Client/src/app/transactions/transactions.component.html
+++ b/Commerce-Client/src/app/transactions/transactions.component.html
@@ -20,4 +20,7 @@
       </tr>
     </tbody>
   </table>
+  <hr>
+  <td><label class="btn-standard" ngbButtonLabel> Export to Excel </label></td>
+  <td><label class="btn-standard" ngbButtonLabel> Add Transaction </label></td>
 </div>
