--- a/Commerce-Client/src/app/app.component.html
+++ b/Commerce-Client/src/app/app.component.html
@@ -1,17 +1,10 @@
-<!-- Toolbar -->
-<div class="toolbar" role="banner">
-  <a href="https://www.commercebank.com/">
-    <img
-      alt="Commerce Logo"
-      src="assets/img/commerce-bank-logo.png"
-    />
-  </a>
-  <nav class="nav-primary">
-    <a>Dashboard</a>
-    <a>Transactions</a>
-  </nav>
-  
+<app-navigation></app-navigation>
+<div class="container card">
+  <hr>
+  <router-outlet></router-outlet>
+  <hr>
 </div>
-<ng-container>
-  <app-transactions></app-transactions>
-</ng-container>
+  <!-- <app-notifications></app-notifications> 
+</div> -->
+
+
