--- a/Commerce-Client/src/app/transactions/transactions.component.html
+++ b/Commerce-Client/src/app/transactions/transactions.component.html
@@ -1,21 +1,26 @@
-<table 
-  class="table table-striped table-bordered">
-  <thead>
-    <tr>
-      <th scope="col">Account</th>
-      <th scope="col">Date</th>
-      <th scope="col">Balance</th>
-      <th scope="col">Amount</th>
-      <th scope="col">Description</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let transaction of transactions">
-      <td>{{ transaction.account }}</td>
-      <td>{{ transaction.date }}</td>
-      <td>{{ transaction.balance | number }}</td>
-      <td>{{ transaction.amount | number }}</td>
-      <td>{{ transaction.description }}</td>
-    </tr>
-  </tbody>
-</table>
+<div class="table-responsive">
+  <table 
+    class="table table-striped table-bordered">
+    <thead class="table-head">
+      <tr>
+        <th scope="col">Account</th>
+        <th scope="col">Date</th>
+        <th scope="col">Balance</th>
+        <th scope="col">Amount</th>
+        <th scope="col">Description</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let transaction of transactions">
+        <td>{{ transaction.account }}</td>
+        <td>{{ transaction.date }}</td>
+        <td>{{ transaction.balance | number }}</td>
+        <td>{{ transaction.amount | number }}</td>
+        <td>{{ transaction.description }}</td>
+      </tr>
+    </tbody>
+  </table>
+  <hr>
+  <td><label class="btn-standard" ngbButtonLabel> Export to Excel </label></td>
+  <td><label class="btn-standard" ngbButtonLabel> Add Transaction </label></td>
+</div>
