--- a/Commerce-Client/src/app/notifications/notifications.component.html
+++ b/Commerce-Client/src/app/notifications/notifications.component.html
@@ -17,60 +17,85 @@
     <label class="btn-primary" ngbButtonLabel>
       <input type="checkbox" ngbButton [(ngModel)]="model.duplicates"> Duplicates
     </label>
-    <!-- Date Range Selection -->
-    <div class="container">
-      <span>Date Range:</span>
-      <form class="form-inline">
-        <div class="form-group hidden">
-          <div class="input-group">
-            <input name="datepicker"
-                   class="form-control"
-                   ngbDatepicker
-                   #datepicker="ngbDatepicker"
-                   [autoClose]="'outside'"
-                   (dateSelect)="onDateSelection($event)"
-                   [displayMonths]="2"
-                   [dayTemplate]="t"
-                   outsideDays="hidden"
-                   [startDate]="fromDate">
-            <ng-template #t let-date let-focused="focused">
-              <span class="custom-day"
-                    [class.focused]="focused"
-                    [class.range]="isRange(date)"
-                    [class.faded]="isHovered(date) || isInside(date)"
-                    (mouseenter)="hoveredDate = date"
-                    (mouseleave)="hoveredDate = null">
-                {{ date.day }}
-              </span>
-            </ng-template>
+    <label class="btn-primary" ngbButtonLabel>
+      <input type="checkbox" ngbButton [(ngModel)]="model.notTriggered"> Not Triggered
+    </label>
+    <!-- Category Selection-->
+    <tr>
+      <td>
+        <span>Category:</span>
+        <div class="row">
+          <div class="col">
+            <div ngbDropdown class="d-inline-block">
+              <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>Toggle dropdown</button>
+                <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+                  <button ngbDropdownItem></button>
+                  <button ngbDropdownItem>Category 1</button>
+                  <button ngbDropdownItem>Category 2</button>
+                  <button ngbDropdownItem>Category 3</button>
+                  <button ngbDropdownItem>All</button>
+                </div>
+              </div>
           </div>
         </div>
-        <div class="form-group">
-          <div class="input-group">
-            <input #dpFromDate
-                   class="form-control" placeholder="yyyy-mm-dd"
-                   name="dpFromDate"
-                   [value]="formatter.format(fromDate)"
-                   (input)="fromDate = validateInput(fromDate, dpFromDate.value)">
-            <div class="input-group-append">
-              <button class="btn btn-outline-secondary calendar" (click)="datepicker.toggle()" type="button"></button>
+      </td>
+      <td>
+        <!-- Date Range Selection -->
+        <div class="container">
+          <span>Date Range:</span>
+          <form class="form-inline">
+            <div class="form-group hidden">
+              <div class="input-group">
+                <input name="datepicker"
+                      class="form-control"
+                      ngbDatepicker
+                      #datepicker="ngbDatepicker"
+                      [autoClose]="'outside'"
+                      (dateSelect)="onDateSelection($event)"
+                      [displayMonths]="2"
+                      [dayTemplate]="t"
+                      outsideDays="hidden"
+                      [startDate]="fromDate">
+                <ng-template #t let-date let-focused="focused">
+                  <span class="custom-day"
+                        [class.focused]="focused"
+                        [class.range]="isRange(date)"
+                        [class.faded]="isHovered(date) || isInside(date)"
+                        (mouseenter)="hoveredDate = date"
+                        (mouseleave)="hoveredDate = null">
+                    {{ date.day }}
+                  </span>
+                </ng-template>
+              </div>
             </div>
-          </div>
-        </div>
-        <div class="form-group ml-2">
-          <div class="input-group">
-            <input #dpToDate
-                   class="form-control" placeholder="yyyy-mm-dd"
-                   name="dpToDate"
-                   [value]="formatter.format(toDate)"
-                   (input)="toDate = validateInput(toDate, dpToDate.value)">
-            <div class="input-group-append">
-              <button class="btn btn-outline-secondary calendar" (click)="datepicker.toggle()" type="button"></button>
+            <div class="form-group">
+              <div class="input-group">
+                <input #dpFromDate
+                      class="form-control" placeholder="yyyy-mm-dd"
+                      name="dpFromDate"
+                      [value]="formatter.format(fromDate)"
+                      (input)="fromDate = validateInput(fromDate, dpFromDate.value)">
+                <div class="input-group-append">
+                  <button class="btn btn-outline-secondary calendar" (click)="datepicker.toggle()" type="button"></button>
+                </div>
+              </div>
             </div>
-          </div>
+            <div class="form-group ml-2">
+              <div class="input-group">
+                <input #dpToDate
+                      class="form-control" placeholder="yyyy-mm-dd"
+                      name="dpToDate"
+                      [value]="formatter.format(toDate)"
+                      (input)="toDate = validateInput(toDate, dpToDate.value)">
+                <div class="input-group-append">
+                  <button class="btn btn-outline-secondary calendar" (click)="datepicker.toggle()" type="button"></button>
+                </div>
+              </div>
+            </div>
+          </form>
         </div>
-      </form>
-    </div>
+      </td>
+    </tr>
   </div>
 </div>
 <hr>
@@ -117,20 +142,8 @@
 <div class="card btn-group-standard">
   <div class="card-body">
     <tr>
-      <td><label class="btn-standard" ngbButtonLabel> Export to Excel </label></td>
       <td><label class="btn-standard" ngbButtonLabel> Add Rule </label></td>
-      <!-- <td>
-        <div class="container">
-          <span>Notification Rules</span>
-          <div class="card btn-group-standard">
-            <tr>
-              <td><label class="btn-standard" ngbButtonLabel> Add </label></td>
-              <td><label class="btn-standard" ngbButtonLabel> Edit </label></td>
-              <td><label class="btn-standard" ngbButtonLabel> Delete </label></td>
-            </tr>
-          </div>
-        </div>
-      </td> -->
+      <td><label class="btn-standard" ngbButtonLabel> Export to Excel </label></td>
     </tr>
   </div>
 </div>
