Refactored dashboard table

--- a/Commerce-Client/src/app/notifications/notifications.component.html
+++ b/Commerce-Client/src/app/notifications/notifications.component.html
@@ -100,7 +100,7 @@
 </div>
 <hr>
 <!-- Notifications Table -->
-<div class="table-responsive">
+<!-- <div class="table-responsive">
   <table class="table table-striped">
     <thead class="table-head">
       <tr>
@@ -135,15 +135,41 @@
       </tr>
     </tbody>
   </table>
+</div> -->
+<div class="table-responsive">
+  <td><label class="btn-standard" ngbButtonLabel> Add New Rule </label></td>
+  <table 
+    class="table table-striped table-bordered">
+    <thead class="table-head">
+      <tr>
+        <th scope="col">Select All <input type="checkbox"></th>
+        <th scope="col">Name</th>
+        <th scope="col">Notifications</th>
+        <th scope="col">Edit</th>
+        <th scope="col">Delete</th>
+      </tr>
+    </thead>
+    <tbody class="table-body">
+      <tr *ngFor="let notification of notifications">
+        <td><input type="checkbox"></td>
+        <td>{{ notification.name }}</td>
+        <td>{{ notification.notificationCount | number }}</td>
+        <td>Edit</td>
+        <td>Delete</td>
+      </tr>
+    </tbody>
+  </table>
+  <hr>
+  <td><label class="btn-standard" ngbButtonLabel> Export to Excel </label></td>
 </div>
-<hr>
+<!-- <hr> -->
 
 <!-- Notification Handlers -->
-<div class="card btn-group-standard">
+<!-- <div class="card btn-group-standard">
   <div class="card-body">
     <tr>
       <td><label class="btn-standard" ngbButtonLabel> Add Rule </label></td>
       <td><label class="btn-standard" ngbButtonLabel> Export to Excel </label></td>
     </tr>
   </div>
-</div>
+</div> -->
