--- a/Commerce-Client/src/app/transactions/transactions.component.html
+++ b/Commerce-Client/src/app/transactions/transactions.component.html
@@ -10,7 +10,7 @@
         <th scope="col">Description</th>
       </tr>
     </thead>
-    <tbody>
+    <tbody class="table-body">
       <tr *ngFor="let transaction of transactions">
         <td>{{ transaction.account }}</td>
         <td>{{ transaction.date }}</td>
