--- a/Commerce-Client/src/app/notifications/notifications.component.css
+++ b/Commerce-Client/src/app/notifications/notifications.component.css
@@ -76,9 +76,9 @@
   background-color: #e6e6e6;
 }
 .custom-day.range, .custom-day:hover {
-  background-color: rgb(2, 117, 216);
+  background-color: #006747;
   color: white;
 }
 .custom-day.faded {
-  background-color: rgba(2, 117, 216, 0.5);
+  background-color: #4ba589;
 }
