--- a/Commerce-Client/src/styles/styles.css
+++ b/Commerce-Client/src/styles/styles.css
@@ -2,6 +2,16 @@
 .table-head {
     color: white;
     background-color: #006747;
+    text-align: center;
+}
+
+.table-body {
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    text-align: center;
 }
 
 .btn-standard {
