--- a/Commerce-Client/src/app/notifications/notifications.component.html
+++ b/Commerce-Client/src/app/notifications/notifications.component.html
@@ -100,42 +100,6 @@
 </div>
 <hr>
 <!-- Notifications Table -->
-<!-- <div class="table-responsive">
-  <table class="table table-striped">
-    <thead class="table-head">
-      <tr>
-        <th scope="col">Trigger</th>
-        <th scope="col">Reason</th>
-        <th scope="col">Date</th>
-        <th scope="col">Amount</th>
-        <th scope="col">Description</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <th scope="row">Amount, New</th>
-        <td>5000 withdrawal</td>
-        <td>3/15/2020</td>
-        <td>5000</td>
-        <td>Amazon.com</td>
-      </tr>
-      <tr>
-        <th scope="row">Time</th>
-        <td>3:00am</td>
-        <td>3/1/2020</td>
-        <td>40.37</td>
-        <td>Local Bar</td>
-      </tr>
-      <tr>
-        <th scope="row">Location</th>
-        <td>Russia</td>
-        <td>3/10/2020</td>
-        <td>30.00</td>
-        <td>Perogi's</td>
-      </tr>
-    </tbody>
-  </table>
-</div> -->
 <div class="table-responsive">
   <td><label class="btn-standard" ngbButtonLabel> Add New Rule </label></td>
   <table 
@@ -154,8 +118,8 @@
         <td><input type="checkbox"></td>
         <td>{{ notification.name }}</td>
         <td>{{ notification.notificationCount | number }}</td>
-        <td>Edit</td>
-        <td>Delete</td>
+        <td><img class="edit-ico" src="/assets/img/edit.svg" alt="Edit"></td>
+        <td><img class="trash-ico" src="/assets/img/trash.svg" alt="Delete"></td>
       </tr>
     </tbody>
   </table>
