Added add and export icons

--- a/Commerce-Client/src/app/notifications/notifications.component.html
+++ b/Commerce-Client/src/app/notifications/notifications.component.html
@@ -101,7 +101,11 @@
 <hr>
 <!-- Notifications Table -->
 <div class="table-responsive">
-  <td><label class="btn-standard" ngbButtonLabel> Add New Rule </label></td>
+  <td>
+    <label class="btn-standard" ngbButtonLabel>
+      <img class="add-ico" src="/assets/img/add.svg" alt=""> Add New Rule 
+    </label>
+  </td>
   <table 
     class="table table-striped table-bordered">
     <thead class="table-head">
@@ -123,17 +127,9 @@
       </tr>
     </tbody>
   </table>
-  <hr>
-  <td><label class="btn-standard" ngbButtonLabel> Export to Excel </label></td>
+  <td>
+    <label class="btn-standard" ngbButtonLabel>
+       Export to Excel <img class="export-ico" src="/assets/img/export.svg" alt="">
+    </label>
+  </td>
 </div>
-<!-- <hr> -->
-
-<!-- Notification Handlers -->
-<!-- <div class="card btn-group-standard">
-  <div class="card-body">
-    <tr>
-      <td><label class="btn-standard" ngbButtonLabel> Add Rule </label></td>
-      <td><label class="btn-standard" ngbButtonLabel> Export to Excel </label></td>
-    </tr>
-  </div>
-</div> -->
