--- a/Commerce-Client/src/app/notifications/notifications.component.html
+++ b/Commerce-Client/src/app/notifications/notifications.component.html
@@ -101,7 +101,7 @@
 <hr>
 <!-- Notifications Table -->
 <div class="table-responsive">
-  <td><label class="btn-standard" ngbButtonLabel> Add New Rule </label></td>
+  <td><button class="btn-standard" (click)="openRule()"> Add New Rule </button></td>
   <table 
     class="table table-striped table-bordered">
     <thead class="table-head">
@@ -114,7 +114,7 @@
       </tr>
     </thead>
     <tbody class="table-body">
-      <tr *ngFor="let notification of notifications">
+      <tr *ngFor="let notification of notifications" (click)="openTransactions(notification)">
         <td><input type="checkbox"></td>
         <td>{{ notification.name }}</td>
         <td>{{ notification.notificationCount | number }}</td>
