--- a/Commerce-Client/src/app/rule/rule.component.html
+++ b/Commerce-Client/src/app/rule/rule.component.html
@@ -5,7 +5,7 @@
     </button>
 </div>
 <div class="modal-body">
-    <button class="btn-standard"> Amount</button>
+    <button class="btn-standard" (click)="activeModal.close('Close click'); openAmount();"> Amount</button>
     <button class="btn-standard"> Location </button>
     <button class="btn-standard"> Time </button>
     <button class="btn-standard"> Category </button>
