--- a/Commerce-Client/src/app/notifications/notifications.component.html
+++ b/Commerce-Client/src/app/notifications/notifications.component.html
@@ -102,10 +102,12 @@
 <!-- Notifications Table -->
 <div class="table-responsive">
   <td>
+    <!-- Add New Rule Button -->
     <label class="btn-standard" (click)="openRule()" ngbButtonLabel>
       <img class="add-ico" src="/assets/img/add.svg" alt=""> Add New Rule 
     </label>
   </td>
+  <!-- Table -->
   <table 
     class="table table-striped table-bordered">
     <thead class="table-head">
@@ -128,6 +130,7 @@
     </tbody>
   </table>
   <td>
+    <!-- Export to Excel Button -->
     <label class="btn-standard" ngbButtonLabel>
        Export to Excel <img class="export-ico" src="/assets/img/export.svg" alt="">
     </label>
