--- a/Commerce-Client/src/app/rule/rule.component.html
+++ b/Commerce-Client/src/app/rule/rule.component.html
@@ -1,14 +1,14 @@
 <div class="modal-header">
-    <h4 class="modal-title">Hi there!</h4>
+    <h4 class="modal-title">Please select rule to add</h4>
     <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss('Cross click')">
       <span aria-hidden="true">&times;</span>
     </button>
 </div>
 <div class="modal-body">
     <button class="btn-standard" (click)="activeModal.close('Close click'); openAmount();"> Amount</button>
-    <button class="btn-standard"> Location </button>
-    <button class="btn-standard"> Time </button>
-    <button class="btn-standard"> Category </button>
+    <button class="btn-standard" (click)="activeModal.close('Close click'); openLocation();"> Location </button>
+    <button class="btn-standard" (click)="activeModal.close('Close click'); openTime();"> Time </button>
+    <button class="btn-standard" (click)="activeModal.close('Close click'); openCategory();"> Category </button>
 </div>
 <div class="modal-footer">
     <button type="button" class="btn btn-outline-dark" (click)="activeModal.close('Close click')">Close</button>
