--- a/Commerce-Client/src/app/category/category.component.html
+++ b/Commerce-Client/src/app/category/category.component.html
@@ -6,7 +6,7 @@
 </div>
 <div class="modal-body">
   <label for="category">Category </label>
-  <select name="category" id="category">
+  <select type="category" [(ngModel)]="cat">
     <option value="" selected="selected">Select category</option>
     <option value="diningOut">Dining Out</option>
     <option value="paycheck">Paycheck</option>
@@ -25,7 +25,7 @@
   </select>
 </div>
 <div class="modal-footer">
-  <label class="btn-standard" (click)="addRule()" ngbButtonLabel>
+  <label class="btn-standard" (click)="addRule(); activeModal.close('Close click');" ngbButtonLabel>
     Add Rule
  </label>
   <button type="button" class="btn btn-outline-dark" (click)="activeModal.close('Close click'); goBack();">Go Back</button>
