--- a/Commerce-Client/src/app/time/time.component.html
+++ b/Commerce-Client/src/app/time/time.component.html
@@ -6,12 +6,12 @@
 </div>
 <div class="modal-body">
   <label for="beginTime">Time </label>
-  <input type="time" name="beginTime" id="beginTime">
+  <input type="time" [(ngModel)]="beginTime">
   <label for="endTime">to </label>
-  <input type="time" name="endTime" id="endTime">
+  <input type="time" [(ngModel)]="endTime">
 </div>
 <div class="modal-footer">
-  <label class="btn-standard" (click)="addRule()" ngbButtonLabel>
+  <label class="btn-standard" (click)="addRule(); activeModal.close('Close click');" ngbButtonLabel>
     Add Rule
  </label>
   <button type="button" class="btn btn-outline-dark" (click)="activeModal.close('Close click'); goBack();">Go Back</button>
