--- a/Commerce-Client/src/app/transactions/transactions.component.html
+++ b/Commerce-Client/src/app/transactions/transactions.component.html
@@ -12,8 +12,8 @@
     </thead>
     <tbody class="table-body">
       <tr *ngFor="let transaction of transactions">
-        <td>{{ transaction.account }}</td>
-        <td>{{ transaction.date }}</td>
+        <td>{{ transaction.accountNumber }}</td>
+        <td>{{ transaction.processingDate }}</td>
         <td>{{ transaction.balance | number }}</td>
         <td>{{ transaction.amount | number }}</td>
         <td>{{ transaction.description }}</td>
