Configured a potential pagination solution for the transactions table

--- a/Commerce-Client/src/app/transactions/transactions.component.html
+++ b/Commerce-Client/src/app/transactions/transactions.component.html
@@ -20,6 +20,19 @@
       </tr>
     </tbody>
   </table>
+
+  <div class="d-flex justify-content-between p-2">
+    <ngb-pagination [collectionSize]="collectionSize" [(page)]="page" [pageSize]="pageSize">
+    </ngb-pagination>
+  
+    <select class="custom-select" style="width: auto" [(ngModel)]="pageSize">
+      <option [ngValue]="10">10 transactions per page</option>
+      <option [ngValue]="25">25 transactions per page</option>
+      <option [ngValue]="50">50 transactions per page</option>
+      <option [ngValue]="-1">Show all transactions</option>
+    </select>
+  </div>
+
   <hr>
   <td><label class="btn-standard" ngbButtonLabel> Export to Excel </label></td>
   <td><label class="btn-standard" ngbButtonLabel> Add Transaction </label></td>
