--- a/Commerce-Client/src/app/transactions/transactions.component.html
+++ b/Commerce-Client/src/app/transactions/transactions.component.html
@@ -1,26 +1,31 @@
-<div class="table-responsive">
-  <table 
-    class="table table-striped table-bordered">
-    <thead class="table-head">
-      <tr>
-        <th scope="col">Account</th>
-        <th scope="col">Date</th>
-        <th scope="col">Balance</th>
-        <th scope="col">Amount</th>
-        <th scope="col">Description</th>
-      </tr>
-    </thead>
-    <tbody class="table-body">
-      <tr *ngFor="let transaction of transactions">
-        <td>{{ transaction.accountNumber }}</td>
-        <td>{{ transaction.processingDate }}</td>
-        <td>{{ transaction.balance | number }}</td>
-        <td>{{ transaction.amount | number }}</td>
-        <td>{{ transaction.description }}</td>
-      </tr>
-    </tbody>
-  </table>
-
+<div class="view-height">
+  <div class="table-scroll">
+    <table 
+      class="table table-striped table-bordered">
+      <thead class="table-head">
+        <tr>
+          <th class="left" scope="col">Account</th>
+          <th class="left" scope="col">Date</th>
+          <th class="left" scope="col">Description</th>
+          <th class="right" scope="col">Amount</th>
+          <th class="right" scope="col">Balance</th>
+      
+        </tr>
+      </thead>
+      <tbody class="table-body">
+        <tr *ngFor="let transaction of transactions">
+          <td class="left">{{ transaction.accountNumber }}</td>
+          <td class="left">{{ transaction.processingDate | date:'medium'}}</td>
+          <td class="left">{{ transaction.description }}</td>
+          <td class="right">{{transaction.transactionType === 1 ? '+' : '-' }}
+            {{ transaction.amount | currency }}
+        </td>
+          <td class="right">{{ transaction.balance | currency }}</td>
+  <!-- transaction.transactionType === 1 ? black : red" -->
+        </tr>
+      </tbody>
+    </table>
+  </div>
   <div class="d-flex justify-content-between p-2">
     <ngb-pagination [collectionSize]="collectionSize" [(page)]="page" [pageSize]="pageSize">
     </ngb-pagination>
