Issue #65 Added code to support a notification rule of a balance being below a certain dollar amount

--- a/Commerce-Client/src/app/rule/rule.component.html
+++ b/Commerce-Client/src/app/rule/rule.component.html
@@ -11,8 +11,13 @@
 </div>
 <div class="modal-body">
     <!-- Amount -->
-    <label for="amountOver">Amount over $ </label>
+    <label for="amount">Transaction amount over $ </label>
     <input type="number" min="1" step="any" [(ngModel)]="rule.amount">
+</div>
+<div class="modal-body">
+    <!-- Balance -->
+    <label for="balance">Account balance under $ </label>
+    <input type="number" min="1" step="any" [(ngModel)]="rule.balance">
 </div>
 <div class="modal-body">
     <!-- Category -->
