--- a/Commerce-Client/src/app/rule/rule.component.html
+++ b/Commerce-Client/src/app/rule/rule.component.html
@@ -1,12 +1,12 @@
 <div class="modal-header">
-    <h4 class="modal-title">Create a new notification rule</h4>
+    <h4 class="modal-title"> {{ triggerId === 0 ? 'Create a new notification rule' : 'Edit ' + triggerName }}</h4>
     <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss('Cross click')">
     <span aria-hidden="true">&times;</span>
     </button>
 </div>
 <div class="modal-body">
     <!-- Name -->
-    <label>New rule name: </label>
+    <label> {{ triggerId === 0 ? 'New rule name: ' : 'Edit rule name: ' }}</label>
     <input [(ngModel)]="rule.triggerName">
 </div>
 <div class="modal-body">
@@ -102,7 +102,7 @@
 </div>
 <div class="modal-footer">
     <label class="btn-standard" (click)="addRule(); activeModal.close('Close click');" ngbButtonLabel>
-        Add Rule
+        {{ triggerId === 0 ? 'Add Rule' : 'Edit Rule' }}
      </label>
     <button type="button" class="btn btn-outline-dark" (click)="activeModal.close('Close click')">Close</button>
 </div>
