Issue #85 Added code to support exporting Notifications to spreadsheets

--- a/Commerce-Client/src/app/transactions/transactions.component.html
+++ b/Commerce-Client/src/app/transactions/transactions.component.html
@@ -30,9 +30,13 @@
   </div>
   <hr>
   <td>
-  <label class="btn-standard" (click)="openNewTransaction()" ngbButtonLabel>
-    <img class="add-ico" src="/assets/img/add.svg" alt=""> Add New Transaction 
+  <label class="btn-standard" (click)="openNewTransaction()" ngbButtonLabel> Add New Transaction 
+    <img class="add-ico" src="/assets/img/add.svg" alt="">
   </label>
   </td>
-  <td><label class="btn-standard" (click)="export()" ngbButtonLabel> Export to Excel </label></td>
+  <td>
+    <label class="btn-standard" (click)="export()" ngbButtonLabel> Export to Excel 
+      <img class="export-ico" src="/assets/img/export.svg" alt="">
+    </label>
+  </td>
 </div>
