--- a/Commerce-Client/src/app/notifications/notifications.component.html
+++ b/Commerce-Client/src/app/notifications/notifications.component.html
@@ -111,7 +111,6 @@
     class="table table-striped table-bordered">
     <thead class="table-head">
       <tr>
-        <th scope="col">Select All <input type="checkbox"></th>
         <th scope="col">Name</th>
         <th scope="col">Notifications</th>
         <th scope="col">Edit</th>
@@ -120,10 +119,9 @@
     </thead>
     <tbody class="table-body">
       <tr *ngFor="let trigger of triggers">
-        <td><input type="checkbox"></td>
         <td>{{ trigger.triggerName }}</td>
         <td>{{ trigger.triggerCount | number }} 
-          <label class="btn-standard search" (click)="openNotifications(trigger.triggerID)" ngbButtonLabel> Open </label>
+          <label class="btn-standard search" (click)="getNotifications(trigger.triggerID)" ngbButtonLabel> Open </label>
         </td>
         <td><img class="edit-ico" src="/assets/img/edit.svg" alt="Edit" (click)="openRule(trigger.triggerID, trigger.triggerName)"></td>
         <td><img class="trash-ico" src="/assets/img/trash.svg" alt="Delete" (click) ="deleteRule(trigger.triggerID, trigger.triggerName)"></td>
@@ -132,13 +130,13 @@
   </table>
   <td>
     <!-- Add New Rule Button -->
-    <label class="btn-standard" (click)="openRule(0, '')" ngbButtonLabel>
-      <img class="add-ico" src="/assets/img/add.svg" alt=""> Add New Rule 
+    <label class="btn-standard" (click)="openRule(0, '')" ngbButtonLabel> Add New Rule 
+      <img class="add-ico" src="/assets/img/add.svg" alt=""> 
     </label>
   </td>
   <td>
     <!-- Export to Excel Button -->
-    <label class="btn-standard" ngbButtonLabel>
+    <label class="btn-standard" (click)="export()" ngbButtonLabel>
        Export to Excel <img class="export-ico" src="/assets/img/export.svg" alt="">
     </label>
   </td>
